<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkNight"
    tools:context=".ResultActivity">

    <!-- CardView containing Question Number/Title/Score -->
    <android.support.v7.widget.CardView
        android:id="@+id/cardview_ScoreTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_med"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/mar_right_small"
        android:layout_marginLeft="@dimen/mar_left_small"
        android:layout_marginRight="@dimen/mar_right_small"
        android:layout_marginStart="@dimen/mar_left_small"
        android:layout_marginTop="@dimen/mar_top_small"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/cardView_radius"
        app:cardElevation="@dimen/cardView_elevation">

        <!-- TextView to show Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/mar_default"
            android:gravity="center"
            android:text="@string/txtvw_result_title"
            android:textColor="@color/colorFontWhite"
            android:textSize="@dimen/text_font_lar"
            android:textStyle="bold"
            app:fontFamily="serif-monospace" />
    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/btn_height_lar"
        android:layout_marginTop="@dimen/btn_height_lar"
        android:background="@color/colorDarkNight"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- CardView for Question -->
            <android.support.v7.widget.CardView
                android:id="@+id/cardview_Score"
                android:layout_width="match_parent"
                android:layout_height="@dimen/txtvw_score_height"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/mar_bottom_small"
                android:layout_marginEnd="@dimen/mar_right_small"
                android:layout_marginLeft="@dimen/mar_left_small"
                android:layout_marginRight="@dimen/mar_right_small"
                android:layout_marginStart="@dimen/mar_left_small"
                android:layout_marginTop="@dimen/mar_top_med"
                app:cardBackgroundColor="@color/colorDarkNight"
                app:cardCornerRadius="@dimen/cardView_radius"
                app:cardElevation="@dimen/cardView_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mar_default"
                    android:background="@drawable/score_bg"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_UserName"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginEnd="@dimen/mar_right_small"
                        android:layout_marginLeft="@dimen/mar_left_small"
                        android:layout_marginRight="@dimen/mar_right_small"
                        android:layout_marginStart="@dimen/mar_left_small"
                        android:layout_marginTop="@dimen/mar_top_small"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorFontWhite"
                        android:textSize="@dimen/text_font_med"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/mar_default"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/mar_bottom_small"
                            android:layout_marginEnd="@dimen/mar_right_small"
                            android:layout_marginLeft="@dimen/mar_left_med"
                            android:layout_marginRight="@dimen/mar_right_small"
                            android:layout_marginStart="@dimen/mar_left_med"
                            android:layout_weight="1"
                            android:text="@string/txtvw_total_ques"
                            android:textColor="@color/colorFontWhite"
                            android:textSize="@dimen/text_font_med"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView_TotalQuestions"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/mar_bottom_small"
                            android:layout_marginEnd="@dimen/mar_right_small"
                            android:layout_marginLeft="@dimen/mar_left_small"
                            android:layout_marginRight="@dimen/mar_right_small"
                            android:layout_marginStart="@dimen/mar_left_small"
                            android:layout_weight="1"
                            android:text="@string/txtvw_score_default"
                            android:textAlignment="center"
                            android:textColor="@color/colorFontWhite"
                            android:textSize="@dimen/text_font_lar"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/mar_default"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/mar_bottom_small"
                            android:layout_marginEnd="@dimen/mar_right_small"
                            android:layout_marginLeft="@dimen/mar_left_med"
                            android:layout_marginRight="@dimen/mar_right_small"
                            android:layout_marginStart="@dimen/mar_left_med"
                            android:layout_weight="1"
                            android:text="@string/txtvw_correct"
                            android:textColor="@color/colorFontWhite"
                            android:textSize="@dimen/text_font_med"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView_Correct"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/mar_bottom_small"
                            android:layout_marginEnd="@dimen/mar_right_small"
                            android:layout_marginLeft="@dimen/mar_left_med"
                            android:layout_marginRight="@dimen/mar_right_small"
                            android:layout_marginStart="@dimen/mar_left_med"
                            android:layout_weight="1"
                            android:text="@string/txtvw_score_default"
                            android:textAlignment="center"
                            android:textColor="@color/colorFontWhite"
                            android:textSize="@dimen/text_font_lar"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/mar_default"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/mar_bottom_med"
                            android:layout_marginEnd="@dimen/mar_right_small"
                            android:layout_marginLeft="@dimen/mar_left_med"
                            android:layout_marginRight="@dimen/mar_right_small"
                            android:layout_marginStart="@dimen/mar_left_med"
                            android:layout_weight="1"
                            android:text="@string/txtvw_wrong"
                            android:textColor="@color/colorFontWhite"
                            android:textSize="@dimen/text_font_med"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView_Wrong"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/mar_bottom_small"
                            android:layout_marginEnd="@dimen/mar_right_small"
                            android:layout_marginLeft="@dimen/mar_left_med"
                            android:layout_marginRight="@dimen/mar_right_small"
                            android:layout_marginStart="@dimen/mar_left_med"
                            android:layout_weight="1"
                            android:text="@string/txtvw_score_default"
                            android:textAlignment="center"
                            android:textColor="@color/colorFontWhite"
                            android:textSize="@dimen/text_font_lar"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/mar_default"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/mar_bottom_small"
                            android:layout_marginEnd="@dimen/mar_right_small"
                            android:layout_marginLeft="@dimen/mar_left_med"
                            android:layout_marginRight="@dimen/mar_right_small"
                            android:layout_marginStart="@dimen/mar_left_med"
                            android:layout_weight="1"
                            android:text="@string/txtvw_not_answered"
                            android:textColor="@color/colorFontWhite"
                            android:textSize="@dimen/text_font_med"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView_NotAnswered"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/mar_bottom_small"
                            android:layout_marginEnd="@dimen/mar_right_small"
                            android:layout_marginLeft="@dimen/mar_left_med"
                            android:layout_marginRight="@dimen/mar_right_small"
                            android:layout_marginStart="@dimen/mar_left_med"
                            android:layout_weight="1"
                            android:text="@string/txtvw_score_default"
                            android:textAlignment="center"
                            android:textColor="@color/colorFontWhite"
                            android:textSize="@dimen/text_font_lar"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/mar_default"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/mar_bottom_small"
                            android:layout_marginEnd="@dimen/mar_right_small"
                            android:layout_marginLeft="@dimen/mar_left_med"
                            android:layout_marginRight="@dimen/mar_right_small"
                            android:layout_marginStart="@dimen/mar_left_med"
                            android:layout_weight="1"
                            android:text="@string/txtvw_score"
                            android:textColor="@color/colorFontWhite"
                            android:textSize="@dimen/text_font_med"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView_Score"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/mar_bottom_small"
                            android:layout_marginEnd="@dimen/mar_right_small"
                            android:layout_marginLeft="@dimen/mar_left_med"
                            android:layout_marginRight="@dimen/mar_right_small"
                            android:layout_marginStart="@dimen/mar_left_med"
                            android:layout_weight="1"
                            android:text="@string/txtvw_score_default"
                            android:textAlignment="center"
                            android:textColor="@color/colorFontWhite"
                            android:textSize="@dimen/text_font_lar"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_Star"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height_med"
                android:layout_below="@id/cardview_Score"
                android:layout_marginEnd="@dimen/mar_right_small"
                android:layout_marginLeft="@dimen/mar_left_small"
                android:layout_marginRight="@dimen/mar_right_small"
                android:layout_marginStart="@dimen/mar_left_small"
                android:layout_marginTop="@dimen/mar_top_small"
                android:layout_marginBottom="@dimen/btn_height_lar"
                app:cardBackgroundColor="@color/colorDarkNight"
                app:cardCornerRadius="@dimen/cardView_radius"
                app:cardElevation="@dimen/cardView_elevation">

                <RatingBar
                    android:id="@+id/score_RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/mar_default"
                    android:isIndicator="true"
                    android:numStars="5" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_Restart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_med"
        android:background="@drawable/button_red"
        android:text="@string/btn_next_level"
        android:textColor="@color/colorFontWhite"
        android:textSize="@dimen/text_font_lar"
        android:textStyle="bold"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>